--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3'
 services:
   web:
     build: .
+    # env_file:
+    #   - "./celery_docker_proj/.env"
     command: python manage.py runserver 0.0.0.0:8000
     volumes: 
       - .:/code
